Refactored CMake project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,11 @@ include_directories(
 	${FREETYPE_PATH}/include
 	${BOOST_PATH}
 
+	segaley/lib/gl-env/include
 	segaley/lib/main/include
+	segaley/lib/misc/include
 )
 
+add_subdirectory( segaley/lib/gl-env )
 add_subdirectory( segaley/lib/main )
+add_subdirectory( segaley/lib/misc )
