Added a class for safety work with Texture

--- a/segaley/lib/gl-env/CMakeLists.txt
+++ b/segaley/lib/gl-env/CMakeLists.txt
@@ -13,4 +13,4 @@ add_library(
 	source/Image.cpp
 	source/Vbo.cpp
 	source/Window.cpp
- "include/Vao.h" "source/Vao.cpp")
+ "include/Vao.h" "source/Vao.cpp" "source/Texture2D.cpp" "include/Texture2D.h")
