Added safety class Shader for working with shaders without direct OpenGL

--- a/segaley/lib/gl-env/CMakeLists.txt
+++ b/segaley/lib/gl-env/CMakeLists.txt
@@ -5,12 +5,18 @@ add_library(
 	include/Gl.h
 	include/Glfw.h
 	include/Image.h
+	include/Shader.h
+	include/Texture2D.h
+	include/Vao.h
 	include/Vbo.h
 	include/Window.h
 	
 	source/Gl.cpp
 	source/Glfw.cpp
 	source/Image.cpp
+	source/Shader.cpp
+	source/Texture2D.cpp
+	source/Vao.cpp
 	source/Vbo.cpp
 	source/Window.cpp
- "include/Vao.h" "source/Vao.cpp" "source/Texture2D.cpp" "include/Texture2D.h")
+)
