--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,8 +40,10 @@ include_directories(
 	segaley/lib/gl-env/include
 	segaley/lib/main/include
 	segaley/lib/misc/include
+	segaley/lib/shaders/include
 )
 
 add_subdirectory( segaley/lib/gl-env )
 add_subdirectory( segaley/lib/main )
 add_subdirectory( segaley/lib/misc )
+add_subdirectory( segaley/lib/shaders )
