Added a base class for all cameras called like 'Camera'. Also, added a class Camera3D for working with 3D camera

--- a/segaley/lib/camera/CMakeLists.txt
+++ b/segaley/lib/camera/CMakeLists.txt
@@ -2,7 +2,10 @@
 add_library(
 	camera
 	
+	include/Camera.h
 	include/Camera2D.h
+	include/Camera3D.h
 	
 	source/Camera2D.cpp
+	source/Camera3D.cpp
 )
