Added an ability to draw a rectangle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ include_directories(
 	segaley/lib/camera/include
 	segaley/lib/font/include
 	segaley/lib/gl-env/include
+	segaley/lib/gui/include
 	segaley/lib/input-devices/include
 	segaley/lib/main/include
 	segaley/lib/misc/include
@@ -51,6 +52,7 @@ include_directories(
 add_subdirectory( segaley/lib/camera )
 add_subdirectory( segaley/lib/font )
 add_subdirectory( segaley/lib/gl-env )
+add_subdirectory( segaley/lib/gui )
 add_subdirectory( segaley/lib/input-devices )
 add_subdirectory( segaley/lib/main )
 add_subdirectory( segaley/lib/misc )
