Added an ability to set horizontal or vertiaclt a text align in a TextLine

--- a/segaley/lib/gui/CMakeLists.txt
+++ b/segaley/lib/gui/CMakeLists.txt
@@ -3,12 +3,15 @@ add_library(
 	gui
 	
 	include/Frame.h
+	include/TextLine.h
 
 	source/Frame.cpp
+	source/TextLine.cpp
 )
 
 target_link_libraries(
 	gui PUBLIC
+		font
 		misc
 		gl-env
 		shaders
